--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="bg-slate-900 text-white">
   <head>
     <meta charset="UTF-8" />
     <title>JARVIS 0.0.1</title>
